# LPMwithPruning

./: CMakeLists.txt  README.md  Trie.cpp  Trie.h  build.sh  fibIpTestMethod.h  main.cpp  randomIpTestMethod.h  std_bf.h
data4test/: fib_flow.tr
data4test/fibIp/: route_table.tr
data4test/randomIP/: random_flow.tr  route_table.tr
